[gd_scene load_steps=11 format=3 uid="uid://tqp1uvqfkoxt"]

[ext_resource type="Script" path="res://move.gd" id="1_oqwyd"]
[ext_resource type="Texture2D" uid="uid://br18n5xcv3gyt" path="res://Silver thread character test.png" id="2_dwl64"]
[ext_resource type="Script" path="res://MainCamera.gd" id="3_mlbus"]
[ext_resource type="Texture2D" uid="uid://cqrthfpreecn4" path="res://OIG4.jpg" id="4_m0ea6"]
[ext_resource type="PackedScene" uid="uid://dianel4p2kxqg" path="res://needle.tscn" id="5_xfpga"]
[ext_resource type="PackedScene" uid="uid://tpiq1pi7ednf" path="res://dir_arrow.tscn" id="6_o8osn"]
[ext_resource type="Texture2D" uid="uid://c0dwqlg4fdx0o" path="res://little_arrow.png" id="7_hv38b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7r7pq"]
radius = 29.7322

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2verb"]
radius = 15.0
height = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xntgk"]
radius = 8.94427

[node name="player" type="CharacterBody2D"]
position = Vector2(137, 197)
collision_layer = 2
script = ExtResource("1_oqwyd")

[node name="Area2D" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.00012207)
shape = SubResource("CircleShape2D_7r7pq")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_dwl64")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_speed = 30.0
script = ExtResource("3_mlbus")

[node name="Background2" type="Sprite2D" parent="Camera2D"]
modulate = Color(0.227451, 0.227451, 0.227451, 1)
z_index = -1
position = Vector2(-5.00006, -335)
scale = Vector2(1.54908, 1.54908)
texture = ExtResource("4_m0ea6")

[node name="BigCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_2verb")

[node name="Needle" parent="." instance=ExtResource("5_xfpga")]

[node name="DirArrow" parent="." instance=ExtResource("6_o8osn")]

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="SmallCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_xntgk")

[node name="LittleArrow" type="Sprite2D" parent="."]
position = Vector2(0, -55)
texture = ExtResource("7_hv38b")

[node name="LittleBallsContainer" type="Node2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
